# amplifier-module-markdown-utils

./: HOW_THIS_MODULE_WAS_MADE.md  README.md  pyproject.toml
examples/: basic_usage.py
src/amplifier_module_markdown_utils/: __init__.py  metadata.py  models.py  parser.py  updater.py
tests/: test_metadata.py  test_models.py  test_parser.py  test_updater.py
