[project]
name = "amplifier-module-markdown-utils"
version = "0.1.0"
description = "Markdown processing utilities for Amplifier"
authors = [
    {name = "Brian Krabach", email = "briankrabach@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "amplifier-core",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pyright>=1.1.0",
]

[tool.uv.sources.amplifier-core]
git = "https://github.com/microsoft/amplifier-dev"
subdirectory = "amplifier-core"
branch = "main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_module_markdown_utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["src", "tests"]
exclude = [".venv", "__pycache__", "*.egg-info"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
